cabal-version:      >=1.10
name:               haskell-hacking
version:            0.1.0.0
license-file:       LICENSE
maintainer:         korbinian.maier@posteo.de
author:             Korbinian Maier
build-type:         Simple
extra-source-files:
    CHANGELOG.md
    README.md

executable haskell-hacking
    main-is:          Main.hs
    hs-source-dirs:   ./ src
    other-modules:
        Date
        Estimation

    default-language: Haskell2010
    build-depends:    base >=4.13 && <4.14
